--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,14 +66,14 @@ jobs:
             ./*.so
 
   build-ios-v2:
-    runs-on: macos-11
+    runs-on: macos-latest
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.3.0
         with:
-         xcode-version: 13.0
+         xcode-version: latest-stable
       - name: Set variables
         run: |
          HASH=$(cat SNAPSHOT_HASH)
@@ -81,7 +81,7 @@ jobs:
       - name: Install tools
         run: |
           brew update
-          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config
+          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja
           export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig
           git clone https://github.com/libimobiledevice/libplist
           cd libplist && ./autogen.sh --without-cython && sudo make install && cd ..
@@ -111,7 +111,7 @@ jobs:
           gclient sync
           reflutter ${{env.SNAPSHOT_HASH}} -l
       - name: ninja build Flutter.framework
-        run: export PATH=$PATH:`pwd`/depot_tools && sudo xcode-select -s /Applications/Xcode_13.0.app && customEngine/src/flutter/tools/gn --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
+        run: export PATH=$PATH:`pwd`/depot_tools && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
       - name: Move to release
         run: |
          cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
@@ -183,14 +183,14 @@ jobs:
             ./*.so
 
   build-ios-v3:
-    runs-on: macos-11
+    runs-on: macos-latest
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.3.0
         with:
-         xcode-version: 13.0
+         xcode-version: latest-stable
       - name: Set variables
         run: |
          HASH=$(cat SNAPSHOT_HASH)
@@ -198,7 +198,7 @@ jobs:
       - name: Install tools
         run: |
           brew update
-          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config
+          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja
           export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig
           git clone https://github.com/libimobiledevice/libplist
           cd libplist && ./autogen.sh --without-cython && sudo make install && cd ..
@@ -228,7 +228,7 @@ jobs:
           gclient sync
           reflutter ${{env.SNAPSHOT_HASH}} -l patchDump
       - name: ninja build Flutter.framework
-        run: export PATH=$PATH:`pwd`/depot_tools && sudo xcode-select -s /Applications/Xcode_13.0.app && customEngine/src/flutter/tools/gn --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
+        run: export PATH=$PATH:`pwd`/depot_tools && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
       - name: Move to release
         run: |
          cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
