--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,14 +62,14 @@ jobs:
           cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
           cp customEngine/src/out/android_release_arm64/lib.stripped/libflutter.so libflutter_arm64.so 2>/dev/null || :
           cp customEngine/src/out/android_release/lib.stripped/libflutter.so libflutter_arm.so 2>/dev/null || :
-      - name: Release-iOS
+      - name: iOS-release
         uses: softprops/action-gh-release@v1
         with:
           target_commitish: v2-${{env.SNAPSHOT_HASH}}
           tag_name: ios-v2-${{env.SNAPSHOT_HASH}}
           files: |
             ./Flutter
-      - name: Release-Android
+      - name: Android-Release
         uses: softprops/action-gh-release@v1
         with:
           target_commitish: v2-${{env.SNAPSHOT_HASH}}
@@ -134,14 +134,14 @@ jobs:
           cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
           cp customEngine/src/out/android_release_arm64/lib.stripped/libflutter.so libflutter_arm64.so 2>/dev/null || :
           cp customEngine/src/out/android_release/lib.stripped/libflutter.so libflutter_arm.so 2>/dev/null || :
-      - name: Release-iOS
+      - name: iOS-Release
         uses: softprops/action-gh-release@v1
         with:
           target_commitish: v3-${{env.SNAPSHOT_HASH}}
           tag_name: ios-v3-${{env.SNAPSHOT_HASH}}
           files: |
             ./Flutter
-      - name: Release-Android
+      - name: Android-Release
         uses: softprops/action-gh-release@v1
         with:
           target_commitish: v3-${{env.SNAPSHOT_HASH}}
