--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build-v2:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.3.0
         with:
-         xcode-version: latest-stable
+         xcode-version: 13.0
       - name: Set variables
         run: |
          HASH=$(cat SNAPSHOT_HASH)
@@ -79,14 +79,14 @@ jobs:
 
 
   build-v3:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.3.0
         with:
-         xcode-version: latest-stable
+         xcode-version: 13.0
       - name: Set variables
         run: |
          HASH=$(cat SNAPSHOT_HASH)
