--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,8 @@ jobs:
       - name: Install tools
         run: |
           brew update
-          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja
-          export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig
-          git clone https://github.com/libimobiledevice/libplist
-          cd libplist && ./autogen.sh --without-cython && sudo make install && cd ..
-          cd libusbmuxd && ./autogen.sh && sudo make install && cd ..
+          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja libusbmuxd ideviceinstaller ios-deploy
           xcrun --sdk macosx --show-sdk-path
-          brew install ideviceinstaller
-          brew install ios-deploy
           pip3 install wheel
           pip3 install .
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
@@ -91,14 +85,8 @@ jobs:
       - name: Install tools
         run: |
           brew update
-          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja
-          export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig
-          git clone https://github.com/libimobiledevice/libplist
-          cd libplist && ./autogen.sh --without-cython && sudo make install && cd ..
-          cd libusbmuxd && ./autogen.sh && sudo make install && cd ..
+          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja libusbmuxd ideviceinstaller ios-deploy
           xcrun --sdk macosx --show-sdk-path
-          brew install ideviceinstaller
-          brew install ios-deploy
           pip3 install wheel
           pip3 install .
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
