--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-v2:
-    runs-on: macos-13
+    runs-on: macos-latest
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
@@ -22,8 +22,14 @@ jobs:
       - name: Install tools
         run: |
           brew update
-          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja libusbmuxd ideviceinstaller ios-deploy
+          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja
+          export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig
+          git clone https://github.com/libimobiledevice/libplist
+          cd libplist && ./autogen.sh --without-cython && sudo make install && cd ..
+          cd libusbmuxd && ./autogen.sh && sudo make install && cd ..
           xcrun --sdk macosx --show-sdk-path
+          brew install ideviceinstaller
+          brew install ios-deploy
           pip3 install wheel
           pip3 install .
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
@@ -70,7 +76,7 @@ jobs:
             ./*.so
 
   build-v3:
-    runs-on: macos-13
+    runs-on: macos-latest
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
@@ -85,8 +91,14 @@ jobs:
       - name: Install tools
         run: |
           brew update
-          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja libusbmuxd ideviceinstaller ios-deploy
+          brew install libzip openssl libplist autoconf automake libtool autoconf-archive pkg-config ninja
+          export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig
+          git clone https://github.com/libimobiledevice/libplist
+          cd libplist && ./autogen.sh --without-cython && sudo make install && cd ..
+          cd libusbmuxd && ./autogen.sh && sudo make install && cd ..
           xcrun --sdk macosx --show-sdk-path
+          brew install ideviceinstaller
+          brew install ios-deploy
           pip3 install wheel
           pip3 install .
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
