--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-v2:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
@@ -69,7 +69,7 @@ jobs:
             ./*.so
 
   build-v3:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - name: Check out repository od
         uses: actions/checkout@v2
