--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,14 @@ jobs:
           brew install ninja libusbmuxd ideviceinstaller ios-deploy python@3.11
           brew link --overwrite python@3.11 --force
           xcrun --sdk macosx --show-sdk-path
-          python3 -m pip install wheel
-          python3 -m pip install .
+          python3.11 -m pip install wheel
+          python3.11 -m pip install .
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
           git clone https://github.com/flutter/engine.git
       - name: gclient sync
         run: |
           ROOT_DIR=`pwd`
-          export PATH=$PATH:$ROOT_DIR/depot_tools
+          export PATH=$PATH:$ROOT_DIR/depot_tools:/usr/local/opt/python@3.11/bin
           cd engine
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter ${{env.SNAPSHOT_HASH}} -l)
@@ -46,11 +46,11 @@ jobs:
           gclient sync
           reflutter ${{env.SNAPSHOT_HASH}} -l
       - name: ninja build Flutter.framework
-        run: export PATH=$PATH:`pwd`/depot_tools && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
       - name: ninja build libflutter_arm64
-        run: export PATH=$PATH:`pwd`/depot_tools && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
+        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
       - name: ninja build libflutter_arm
-        run: export PATH=$PATH:`pwd`/depot_tools && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
       - name: Move to release
         run: |
           cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
@@ -86,14 +86,14 @@ jobs:
         run: |
           brew install ninja libusbmuxd ideviceinstaller ios-deploy python@3.11
           brew link --overwrite python@3.11 --force
-          python3 -m pip install wheel
-          python3 -m pip install .
+          python3.11 -m pip install wheel
+          python3.11 -m pip install .
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
           git clone https://github.com/flutter/engine.git
       - name: gclient sync
         run: |
           ROOT_DIR=`pwd`
-          export PATH=$PATH:$ROOT_DIR/depot_tools
+          export PATH=$PATH:$ROOT_DIR/depot_tools:/usr/local/opt/python@3.11/bin
           cd engine
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter ${{env.SNAPSHOT_HASH}} -l)
@@ -108,11 +108,11 @@ jobs:
           gclient sync
           reflutter ${{env.SNAPSHOT_HASH}} -l patchDump
       - name: ninja build Flutter.framework
-        run: export PATH=$PATH:`pwd`/depot_tools && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
       - name: ninja build libflutter_arm64
-        run: export PATH=$PATH:`pwd`/depot_tools && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
+        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
       - name: ninja build libflutter_arm
-        run: export PATH=$PATH:`pwd`/depot_tools && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
       - name: Move to release
         run: |
           cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
