--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: gclient sync
         run: |
           ROOT_DIR=`pwd`
-          export PATH=$PATH:$ROOT_DIR/depot_tools:/usr/local/opt/python@3.11/bin
+          export PATH=$PATH:$ROOT_DIR/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin
           cd engine
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter ${{env.SNAPSHOT_HASH}} -l)
@@ -46,11 +46,11 @@ jobs:
           gclient sync
           reflutter ${{env.SNAPSHOT_HASH}} -l
       - name: ninja build Flutter.framework
-        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
       - name: ninja build libflutter_arm64
-        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
+        run: export PATH=$PATH:`pwd`/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
       - name: ninja build libflutter_arm
-        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
       - name: Move to release
         run: |
           cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
@@ -93,7 +93,7 @@ jobs:
       - name: gclient sync
         run: |
           ROOT_DIR=`pwd`
-          export PATH=$PATH:$ROOT_DIR/depot_tools:/usr/local/opt/python@3.11/bin
+          export PATH=$PATH:$ROOT_DIR/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin
           cd engine
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter ${{env.SNAPSHOT_HASH}} -l)
@@ -108,11 +108,11 @@ jobs:
           gclient sync
           reflutter ${{env.SNAPSHOT_HASH}} -l patchDump
       - name: ninja build Flutter.framework
-        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin && sudo xcode-select -s /Applications/Xcode.app && customEngine/src/flutter/tools/gn --no-goma --ios --ios-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/ios_release
       - name: ninja build libflutter_arm64
-        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
+        run: export PATH=$PATH:`pwd`/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm64 --runtime-mode=release && ninja -C customEngine/src/out/android_release_arm64
       - name: ninja build libflutter_arm
-        run: export PATH=$PATH:`pwd`/depot_tools:/usr/local/opt/python@3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
+        run: export PATH=$PATH:`pwd`/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin && customEngine/src/flutter/tools/gn --no-goma --android --android-cpu=arm --runtime-mode=release && ninja -C customEngine/src/out/android_release
       - name: Move to release
         run: |
           cp customEngine/src/out/ios_release/Flutter.framework/Flutter Flutter
