--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           echo "SNAPSHOT_HASH=$HASH" >> $GITHUB_ENV
       - name: Install tools
         run: |
-          brew install ninja libusbmuxd ideviceinstaller ios-deploy python@3.11
+          brew install ninja libusbmuxd ideviceinstaller ios-deploy
           python3 -m pip install wheel
           python3 -m pip install .
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
@@ -29,7 +29,7 @@ jobs:
       - name: gclient sync
         run: |
           ROOT_DIR=`pwd`
-          export PATH=$PATH:$ROOT_DIR/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin
+          export PATH=$PATH:$ROOT_DIR/depot_tools
           cd engine
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter ${{env.SNAPSHOT_HASH}} -l)
@@ -90,7 +90,7 @@ jobs:
       - name: gclient sync
         run: |
           ROOT_DIR=`pwd`
-          export PATH=$PATH:$ROOT_DIR/depot_tools:/Library/Frameworks/Python.framework/Versions/3.11/bin
+          export PATH=$PATH:$ROOT_DIR/depot_tools
           cd engine
           git config --global user.email "reflutter@example.com" && git config --global user.name "reflutter"
           git fetch origin $(reflutter ${{env.SNAPSHOT_HASH}} -l)
